--- a/src/app/modules/admin/task/task.component.html
+++ b/src/app/modules/admin/task/task.component.html
@@ -5,8 +5,8 @@
         </div>
     </div>
     <div class="card-body">
-        <a routerLink="tasks" class="btn btn-default font-weight-bold mr-2">Tarea</a>
-        <a routerLink="notes" class="btn btn-default font-weight-bold mr-2">Nota</a>
+        <a routerLink="tasks" class="btn btn-default font-weight-bold mr-2" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true}">Tarea</a>
+        <a routerLink="notes" class="btn btn-default font-weight-bold mr-2" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true}">Nota</a>
         <hr>
         <router-outlet></router-outlet>
     </div>
