--- a/src/app/modules/admin/task/notes/modal-note/modal-note.component.html
+++ b/src/app/modules/admin/task/notes/modal-note/modal-note.component.html
@@ -17,25 +17,17 @@
                         formControlName="title"
                     />
                 </div>
-                <div class="col-lg-4">
-                    <label>Fecha creación</label>
-                    <input 
-                        type="date" 
-                        class="form-control form-control-lg form-control-solid"
-                        formControlName="createdAt"
-                    />
-                </div>
             </div>
             <div class="form-group row">
                 <div class="col-lg-12">
                     <label>Descripcion de la tarea</label>
-                    <textarea name="" id="" cols="100" rows="5" class="form-control form-control-lg form-control-solid" formControlName="description"></textarea>
+                    <textarea name="" id="" cols="100" rows="3" class="form-control form-control-lg form-control-solid" formControlName="description"></textarea>
                 </div>
             </div>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Cancelar</button>
-            <button type="button" class="btn btn-primary" (click)="modal.close('Close click')">Guardar</button>
+            <button type="button" class="btn btn-primary" (click)="save()">Guardar</button>
         </div>
     </form>
 </div>
