--- a/src/app/modules/admin/task/notes/notes.component.html
+++ b/src/app/modules/admin/task/notes/notes.component.html
@@ -38,44 +38,41 @@
         class="table table-head-custom table-vertical-center overflow-hidden"
     >
         <thead>
-            <th>
-            USUARIO
-            </th>
-            <th>
-            TITULO
-            </th>
-            <th>
-            FECHA CREACION
-            </th>
-            <th>
-            FECHA CADUCIDAD
-            </th>
-            <th>
-            RESUMEN TAREA
-            </th>
+            <th>USUARIO</th>
+            <th>TITULO</th>
+            <th>RESUMEN NOTE</th>
             <th>OPCIONES</th>
         </thead>
         <tbody>
-            <tr>
-                <td> usuario 1</td>
-                <td> titulo 1</td>
-                <td> 2021-01-01 </td>
-                <td> 2021-01-01 </td>
-                <td> resumen 1 </td>
-            </tr>
-            <tr>
-                <td> usuario 1</td>
-                <td> titulo 1</td>
-                <td> 2021-01-01 </td>
-                <td> 2021-01-01 </td>
-                <td> resumen 1 </td>
-            </tr>
-            <tr>
-                <td> usuario 1</td>
-                <td> titulo 1</td>
-                <td> 2021-01-01 </td>
-                <td> 2021-01-01 </td>
-                <td> resumen 1 </td>
+            <tr *ngFor="let note of $_note | async">
+                <td> {{ note.user }} </td>
+                <td> {{ note.title }} </td>
+                <td> {{ note.description }} </td>
+                <td>
+                    <a
+                        title="Edit product"
+                        class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3"
+                        (click)="editNote(note)"
+                    >
+                        <span
+                        [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'"
+                        cacheSVG="true"
+                        class="svg-icon svg-icon-md svg-icon-primary"
+                        >
+                        </span>
+                    </a>
+                    <a
+                      title="Delete product"
+                      class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
+                    >
+                      <span
+                        [inlineSVG]="'./assets/media/svg/do-not-disturb.svg'"
+                        cacheSVG="true"
+                        class="svg-icon svg-icon-md svg-icon-danger"
+                      >
+                      </span>
+                    </a>
+                  </td>
             </tr>
         </tbody>
     </table>
