--- a/src/app/modules/admin/asign-internal-user/list-asign-internal-user/list-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/list-asign-internal-user/list-asign-internal-user.component.html
@@ -17,7 +17,7 @@
       <div class="form form-label-right">
         <div class="form-group row">
           <div class="col-lg-10">
-            <div class="row" [formGroup]="filterGroup">
+            <div class="row">
   
               <div class="col-lg-4">
                 <mat-form-field class="example-full-width" appearance="fill">
@@ -108,32 +108,27 @@
               <label class="checkbox checkbox-single"
                 ><input
                   type="checkbox"
-                  (click)="grouping.selectAllRows()"
-                  [checked]="grouping.checkAreAllRowsSelected()" /><span></span
+
               ></label>
             </th>
             <th>
               USUARIO INTERNO
               <app-sort-icon
                 column="VINCode"
-                [activeColumn]="sorting.column"
-                [activeDirection]="sorting.direction"
-                (sort)="sort($event)"
+
               ></app-sort-icon>
             </th>
             <th>
               ZONAS
               <app-sort-icon
                 column="manufacture"
-                [activeColumn]="sorting.column"
-                [activeDirection]="sorting.direction"
-                (sort)="sort($event)"
+
               ></app-sort-icon>
             </th>
             <th>OPCIONES</th>
           </thead>
           <tbody>
-            <tr *ngFor="let product of productsService.items$ | async">
+            <tr *ngFor="let product of $_user | async">
               <td class="selection-cell">
                 <label class="checkbox checkbox-single"
                   ><input
@@ -144,30 +139,18 @@
                   <span></span>
                 </label>
               </td>
-              <td>{{ product.username }}</td>
-              <td>{{ product.fullname }}</td>
+              <td>{{ product.id }}</td>
+              <td>{{ product.id }}</td>
               <td>
                 <a
                   title="Edit product"
                   class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3"
-                  [routerLink]="'/ecommerce/product/edit/' + product.id"
+                  [routerLink]="'asign-internal-user/add/' + product.id"
                 >
                   <span
                     [inlineSVG]="'./assets/media/svg/view.svg'"
                     cacheSVG="true"
                     class="svg-icon svg-icon-md svg-icon-primary"
-                  >
-                  </span>
-                </a>
-                <a
-                  title="Delete product"
-                  class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
-                  (click)="delete(product.id)"
-                >
-                  <span
-                    [inlineSVG]="'./assets/media/svg/do-not-disturb.svg'"
-                    cacheSVG="true"
-                    class="svg-icon svg-icon-md svg-icon-danger"
                   >
                   </span>
                 </a>
@@ -188,14 +171,6 @@
           </tbody>
         </table>
       </div>
-      <!-- end: Table buscar iconos svg
-      https://www.flaticon.com/search?word=block&license=selection&color=2&stroke=0&order_by=4&type=icon
-      -->
-      <app-paginator
-        class="d-flex justify-content-between align-items-center flex-wrap"
-        [paginator]="paginator"
-        [isLoading]="isLoading"
-        (paginate)="paginate($event)"
-      ></app-paginator>
+
     </div>
   </div>
