--- a/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
@@ -7,6 +7,12 @@
             </ng-container>
             </h3>
         </div>
+        <div class="card-toolbar">
+            <a type="button" class="btn btn-light" routerLink="/asign-internal-user/list">
+              <i class="fa fa-arrow-left"></i>Back
+            </a>
+        </div>
+        <p *ngFor="let dep of ubigeo">{{ dep.description}}</p>
     </div>
     <div class="card-body">
         <ng-container >
@@ -145,7 +151,7 @@
                                     </mat-select>
                                 </mat-form-field>
                             </div>
-                        </div>     
+                        </div>
                     </div>
                     
                     
