--- a/src/app/modules/admin/asign-internal-user/create-asign-internal-user/create-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/create-asign-internal-user/create-asign-internal-user.component.html
@@ -3,7 +3,7 @@
         <div class="card-title">
             <h3 class="card-label">
             <ng-container>
-                EDITAR RELACION DE USUARIOS ASIGNACION
+                CREAR RELACION DE USUARIOS ASIGNACION
             </ng-container>
             </h3>
         </div>
