--- a/src/app/modules/admin/asign-internal-user/create-asign-internal-user/create-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/create-asign-internal-user/create-asign-internal-user.component.html
@@ -70,7 +70,7 @@
                                                 </mat-label>   
                                             </mat-chip-list>
                                           </mat-select-trigger>
-                                        <mat-option *ngFor="let departament of departamentDomainService.departaments" [id]="departament.id" [value]="departament.code">{{departament.description}}</mat-option>
+                                        <mat-option *ngFor="let departament of $_departament | async" [id]="departament.id" [value]="departament.code">{{departament.description}}</mat-option>
                                     </mat-select>
                                 </mat-form-field>
                             </div>
