--- a/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
@@ -62,7 +62,7 @@
                                     <mat-select multiple (selectionChange)="checkDepartament($event)" #MatDepartamento>
                                         <mat-select-trigger>
                                             <mat-chip-list>
-                                                <mat-label *ngFor="let departamento of arrayGeneral">
+                                                <mat-label *ngFor="let departamento of UserAsignServiceDomain.itemsUbigee$ | async">
                                                     <mat-chip [removable]="removable" (removed)="removeDepartament(departamento.code)">
                                                         {{ departamento.description }}
                                                         <mat-icon matChipRemove>cancel</mat-icon>
@@ -70,7 +70,7 @@
                                                 </mat-label>   
                                             </mat-chip-list>
                                           </mat-select-trigger>
-                                        <mat-option *ngFor="let departament of departamentDomainService.departaments" [id]="departament.id" [value]="departament.code">{{departament.description}}</mat-option>
+                                        <mat-option *ngFor="let departament of $_departament | async" [id]="departament.id" [value]="departament.code">{{departament.description}}</mat-option>
                                     </mat-select>
                                 </mat-form-field>
                             </div>
