modal upload file

--- a/src/app/modules/admin/asign-internal-user/create-asign-internal-user/create-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/create-asign-internal-user/create-asign-internal-user.component.html
@@ -9,8 +9,11 @@
         </div>
         <div class="card-toolbar">
             <a type="button" class="btn btn-light" routerLink="/asign-internal-user/list">
-              <i class="fa fa-arrow-left"></i>Back
+              <i class="fa fa-arrow-left"></i>Regresar
             </a>
+            <button class="btn btn-secondary ml-2" (click)="uploadFile()">
+                <i class="fa fa-file"></i>Subir Archivo
+              </button>
         </div>
     </div>
     <div class="card-body">
