--- a/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
@@ -45,7 +45,7 @@
                                 type="text" 
                                 class="form-control form-control-lg form-control-solid"
                                 placeholder="Nombre completo"
-                                [ngModel]="ubigeo.name"
+                                [value]="(ubigeo.name? ubigeo.name: '') +  (ubigeo.secondName? ubigeo.secondName: '') +  (ubigeo.lastName? ubigeo.lastName: '') +  (ubigeo.secondLastName? ubigeo.secondLastName : '')"
                                 name="fullname"
                             />
                         </div>
@@ -175,5 +175,6 @@
                 </form>
             </div>
         </ng-container>
+        <p>{{ arrayGeneral | json}}</p>
     </div>
 </div>
