mostrando tabla ubigo

--- a/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
@@ -120,7 +120,13 @@
                             <div class="example-button-row">
                                 <mat-form-field appearance="fill" class="example-full-width">
                                     <mat-label>Distritos</mat-label>
-                                    <mat-select multiple (selectionChange)="checkDistrict($event)" #MatDistrito [(ngModel)]="selectedDistricts" [compareWith]="comparer" [ngModelOptions]="{standalone: true}">
+                                    <mat-select multiple 
+                                                (selectionChange)="checkDistrict($event)"
+                                                #MatDistrito 
+                                                [(ngModel)]="selectedDistricts"
+                                                [compareWith]="comparer"
+                                                [ngModelOptions]="{standalone: true}"
+                                    >
                                         <mat-select-trigger>
                                             <mat-chip-list>
                                                 <mat-label *ngFor="let departamento of arrayGeneral">
