--- a/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
@@ -66,7 +66,6 @@
                             <div class="example-button-row">
                                 <mat-form-field appearance="fill" class="example-full-width">
                                     <mat-label>Lista de departamentos</mat-label>
-                                
                                     <mat-select multiple (selectionChange)="checkDepartament($event)" #MatDepartamento [(ngModel)]="selectedDepartaments" [compareWith]="comparer" [ngModelOptions]="{standalone: true}">
                                         <mat-select-trigger>
                                             <mat-chip-list>
@@ -74,7 +73,7 @@
                                                     [removable]="removable" 
                                                     (removed)="removeDepartament(departamento.code)" 
                                                     [selectable]="true"
-                                                    *ngFor="let departamento of arrayGeneral"
+                                                    *ngFor="let departamento of _UbigeoGeneral$ | async"
                                                 >
                                                     {{ departamento.description }}
                                                     <mat-icon matChipRemove>cancel</mat-icon>
@@ -93,20 +92,19 @@
                                     <mat-label>Provincias</mat-label>
                                     <mat-select multiple (selectionChange)="checkProvince($event)" #MatProvincia [(ngModel)]="selectedProvinces" [compareWith]="comparer" [ngModelOptions]="{standalone: true}">
                                         <mat-select-trigger>
-                                            <mat-chip-list>
-                                                <mat-label *ngFor="let departamento of arrayGeneral">
+                                            <mat-chip-list *ngFor="let departamento of _UbigeoGeneral$ | async">
                                                     <mat-chip 
                                                         [removable]="removable" 
                                                         (removed)="removeProvince(provincia.code)" 
+                                                        [selectable]="true"
                                                         *ngFor="let provincia of departamento.provinces"
                                                     >
                                                         {{ provincia.description }}
                                                         <mat-icon matChipRemove>cancel</mat-icon>
                                                     </mat-chip>
-                                                </mat-label>
                                             </mat-chip-list>
                                         </mat-select-trigger>
-                                        <mat-optgroup *ngFor="let group of departamentos" [label]="group.description">
+                                        <mat-optgroup *ngFor="let group of _visor$ | async" [label]="group.description" >
                                             <mat-option *ngFor="let province of group.provinces" [id]="province.id" [value]="province.code">
                                             {{province.description}}
                                             </mat-option>
