--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -328,13 +328,31 @@
                     <a
                         class="menu-link"
                         routerLink="#"
-                        routerLink="/admin/taks"
+                        routerLink="/admin/tasks"
                         routerLinkActive="active"
                     >
                         <i class="menu-bullet menu-bullet-dot">
                         <span></span>
                         </i>
-                        <span class="menu-text">Tareas y Notas</span>
+                        <span class="menu-text">Tareas</span>
+                    </a>
+                    </li>
+                    <li
+                    class="menu-item"
+                    routerLinkActive="menu-item-active"
+                    aria-haspopup="true"
+                    data-menu-toggle="hover"
+                    >
+                    <a
+                        class="menu-link"
+                        routerLink="#"
+                        routerLink="/admin/notes"
+                        routerLinkActive="active"
+                    >
+                        <i class="menu-bullet menu-bullet-dot">
+                        <span></span>
+                        </i>
+                        <span class="menu-text">Notas</span>
                     </a>
                     </li>
                 </ul>
